argocd/kubecon/resources/argo-cd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # ingress.kubernetes.io/proxy-body-size: 100M
    # kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: argo-cd-kubecon.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80
